[package]
name = "axum-practice"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
# Serde / json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# axum
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs"] }
# cookie
tower-cookies = "0.10"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"